correction contact us form; reduce spacing text

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -783,7 +783,7 @@ button,
 /* Header */
 #header h1 {
   font-size: 3.25em;
-  margin: 0 0 0.55em 0; }
+  margin: 0; }
 
 #header p {
   font-size: 1.35em;
@@ -826,8 +826,8 @@ button,
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
-  justify-content: center;
-  position: absolute; }
+  justify-content: flex-start;
+  position: relative; }
   #signup-form .button {
     width: 20em; }
   @media screen and (max-width: 480px) {
